added offer section

--- a/index.html
+++ b/index.html
@@ -291,16 +291,33 @@
    </section>
   <!--End Of Testimonials-->
 
-    <!--Start Of Offer-->
+   <!--Start Of Offer-->   
+<section id="offer">
+  
+
+        <div class = "form-cntr">
+            <h2 class="offer-text">Get 25% Off Your Next Modification Just By Signing Up To Our Mailing List!</h2>
+        <form class = "col-lg-12   my-form" >
+            <div class="row justify-content-center">
+                       <div class="form-group">
+              <label for="exampleInputEmail1" class="offer-label"><span class="form-email">Email Address:</span></label>
+              <input type="email" class="form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            </div>
+            </div>
+             <div class="form-btn">         
+            <button type="submit" class=" my-form-btn">Submit</button>
+        </div>    
+          </form>
+        </div>
 
 
-<section id="Offer">
-<h2> ***Place Holder For Call To Action Section***</h2>
 
 </section>
-<!--End Of Offer-->
+   <!--Start Of Offer-->   
 
-      
+
+
+   <!--Start Of Footer-->   
       <footer>
       <div class="conatiner-fluid d-none d-md-block">
         <div class="row p-3 justify-content-center">
@@ -329,7 +346,7 @@
     </div>
 
 </footer>
-
+<!--End Of Footer--> 
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
