added contact us section

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 </head>
 <body>
       <!--Start Of Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark  ">
+    <nav id="home" class="navbar navbar-expand-lg navbar-dark bg-dark" >
         <a class="navbar-brand" href="#"><img src="images/nlogo.png" width="125rem"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav mx-auto">
-            <a class="nav-item nav-link " href="#"><h3>Home</h3> </a>
-            <a class="nav-item nav-link" href="#"><h3>Services</h3></a>
-            <a class="nav-item nav-link" href="#"><h3>Gallery</h3></a>
-            <a class="nav-item nav-link" href="#"><h3>Reviews</h3></a>
-            <a class="nav-item nav-link" href="#"><h3>Offers</h3></a>
-            <a class="nav-item nav-link" href="#"><h3>Contact Us</h3></a>
+            <a class="nav-item nav-link " href="#home"><h3>Home</h3> </a>
+            <a class="nav-item nav-link" href="#services"><h3>Services</h3></a>
+            <a class="nav-item nav-link" href="#gallery"><h3>Gallery</h3></a>
+            <a class="nav-item nav-link" href="#reviews"><h3>Reviews</h3></a>
+            <a class="nav-item nav-link" href="#offer"><h3>Offers</h3></a>
+            <a class="nav-item nav-link" href="#contact"><h3>Contact Us</h3></a>
           </div>
           <button class="sched-btn"> Schedule Appt</button>
         </div>
@@ -80,21 +80,21 @@
 
        <!--Start Of Services-->
       <section id="services" class="svc-sec">
-<div class="svc-hdr">
-        <h2 class="my-svc">WE BUILD DREAM JEEPS</h2>
-     
+            <div class="svc-hdr">
+            <h2 class="my-svc">WE BUILD DREAM JEEPS</h2>
+                </div>
         <div class ="container text-center my-icons">
             <div class="row">
-                <div class="col -md-4 mx-auto ">
+                <div class="col-md-4 mx-auto ">
                     <i class="material-symbols-outlined icons" > build_circle </i>
                   <h2 class="svc-item">Installation Experts</h2>
                 </div>
-                <div class="col -md-4 mx-auto ">
+                <div class="col-md-4 mx-auto ">
                 <i class="material-symbols-outlined icons">support_agent</i>
                 <h2 class="svc-item">24/7 Customer Support</h2>
             </div>
 
-            <div class="col -md-4 mx-auto ">
+            <div class="col-md-4 mx-auto ">
                 <i class="material-symbols-outlined icons">paid</i>
                 <h2 class="svc-item">Affordable Prices</h2>
             </div>
@@ -315,6 +315,31 @@
 </section>
    <!--Start Of Offer-->   
 
+   <section id="contact">
+       <h2 class="contact-hdr">Contact Us:</h2>
+<div class="container-lg text-center">
+    <div class="row">
+        <div class = "col-lg-3 mx-auto">
+            <span class="material-symbols-outlined icons">schedule</span>
+            <h3 class="svc-item">Hours: 9:00am - 5:00pm (Sun - Sat)</h3>
+        </div>
+        <div class = "col-lg-3 mx-auto">
+            <span class="material-symbols-outlined icons">call</span>
+            <h3 class="svc-item">Call Us: (555)555-JEEP</h3>
+        </div>
+                <div class = "col-lg-3 mx-auto">
+                    <span class="material-symbols-outlined icons">alternate_email</span>
+                    <h3 class="svc-item">Email: demo@demo.com</h3>
+        </div>
+        <div class = "col-lg-3 mx-auto">
+            <span class="material-symbols-outlined icons">add_business</span>
+            <h3 class="svc-item">Location: 123 Bermuda Trngl, N.Altantic,UK</h3>
+</div>
+    </div>
+</div>
+
+   </section>
+
 
 
    <!--Start Of Footer-->   
@@ -322,22 +347,22 @@
       <div class="conatiner-fluid d-none d-md-block">
         <div class="row p-3 justify-content-center">
             <div class="col pl-5 ml-5">
-                <a class="text-decoration-none " href="contact.html">Home</a>
+                <a class="text-decoration-none " href="#home">Home</a>
             </div>
             <div class="col">
-                <a class="text-decoration-none " href="#">Services</a>
+                <a class="text-decoration-none " href="#services">Services</a>
             </div>
             <div class="col">
-                <a class="text-decoration-none " href="shop.html">Gallery</a>
+                <a class="text-decoration-none " href="#gallery">Gallery</a>
             </div>
             <div class="col">
-                <a class="text-decoration-none " href="#">Reviews</a>
+                <a class="text-decoration-none " href="#reviews">Reviews</a>
             </div>
             <div class="col">
-                <a class="text-decoration-none " href="#">Offers</a>
+                <a class="text-decoration-none " href="#offers">Offers</a>
             </div>
             <div class="col pr-3 mr-3">
-                <a class="text-decoration-none " href="#">Contact Us</a>
+                <a class="text-decoration-none " href="#contact">Contact Us</a>
             </div>
         </div>
         <div class="row p-3 justify-content-center">
