updated testimonial sizing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
       <!--Start Of Navbar-->
     <nav id="home" class="navbar navbar-expand-lg navbar-dark bg-dark" >
-        <a class="navbar-brand" href="#"><img src="images/nlogo.png" width="60rem"></a>
+        <a class="navbar-brand" href="#"><img src="images/nlogo.png" width="100rem"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -307,7 +307,7 @@
                         <div class="col-sm-4 style-3">
                             <div class="rev-item ">
                                 <div class="rev-desc bg-white">
-                                    <div class="rev-text color-grey-3 text-center">&ldquo;I Love my JP kit.&rdquo;</div>
+                                    <div class="rev-text color-grey-3 text-center">&ldquo;I Love my Jurassic kit.&rdquo;</div>
                                     <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="images/review(4).png" alt="" width="250rem"></div>
                                     <div class="link-name d-flex justify-content-center">Bobby Diltz</div>
                                     <div class="link-position d-flex justify-content-center">Boulder</div>
